[tool.poetry]
name = "subsearcher"
version = "0.0.1"
description = "Searches through subtitle files to find given words"
authors = ["exc4l <cps0537@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.51.6"
pyperclip = "^1.8.2"
srt = "^3.5.0"
fugashi = {version = "^1.1.1", optional = true}
unidic = {version = "^1.1.0", optional = true}
SudachiPy = "^0.6.3"
SudachiDict-full = "^20211220"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.extras]
fugashi = ["fugashi", "unidic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
